start brick_in_the_wall

--- a/easy/20_bulk_email_generator/scrapbook.ipynb
+++ b/easy/20_bulk_email_generator/scrapbook.ipynb
@@ -50,6 +50,65 @@
     "\n",
     "print(str_out)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "bob = '10'\n",
+    "print(int(bob))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 9, 10, 0, 1, 2, 3, 4, 5, 6, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [0,1,2,3,4,5,6,7,8,9,10]\n",
+    "f = 2\n",
+    "l = 5\n",
+    "p = 8\n",
+    "\n",
+    "def rotate(lst, p):\n",
+    "    return lst[p:] + lst[:p]\n",
+    "\n",
+    "rotated_lst = rotate(lst, p)  # Le pivot est l'indice 2 (élément 3)\n",
+    "print(rotated_lst)  # Résultat : [3, 4, 5, 1, 2]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst = [0,1,2,3,4,5,6,7,8,9,10]\n",
+    "f = 2\n",
+    "l = 5\n",
+    "p = 8\n",
+    "\n",
+    "rotated_lst = rotate(lst, f, l, p)  # Le pivot est l'indice 8\n",
+    "print(rotated_lst)  # [0,1,6,7,2,3,4,5,8,9,10]\n"
+   ]
   }
  ],
  "metadata": {
