--- a/tips.ipynb
+++ b/tips.ipynb
@@ -194,6 +194,11 @@
     "# Afficher une liste 2D\n",
     "# Exemple : [['.', '.', 'O'], ['.', 'O', '.'], ['O', '.', '.']]\n",
     "print(\"\\n\".join(\"\".join(row) for row in map_out))\n",
+    "\n",
+    "# Afficher une liste 2D\n",
+    "# Exemple : [['.', '.', 'O'], ['.', 'O', '.'], ['O', '.', '.']]\n",
+    "for row in map_out:\n",
+    "    print(*row, sep=\"\")\n",
     "\n"
    ]
   },
@@ -206,13 +211,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".....\n",
+      "00000\n",
+      ".....\n",
+      "\n",
+      ".0.\n",
+      ".0.\n",
+      ".0.\n",
+      ".0.\n",
+      ".0.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Transposition de matrice\n",
+    "\n",
+    "map_out = [['.', '.', '.', '.', '.'], ['0', '0', '0', '0','0'], ['.', '.', '.', '.', '.']]\n",
+    "map_out = zip(*map_out)    \n",
+    "for row in map_out:\n",
+    "    print(*row, sep=\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Retrouver les coordonnées de l'unique valeur 'S' dans une liste 2D\n",
     "\n",
-    "# next() renvoie le premier couple (y, x) trouvé où la valeur est \"S\".\n",
+    "# next(iterator) renvoie ici le premier couple (y, x) \n",
     "y0, x0 = next((y, x) for y, row in enumerate(map) for x, value in enumerate(row) if value == \"S\")\n"
    ]
   },
@@ -280,7 +315,7 @@
     "# Your code here...\n",
     "\n",
     "end_time = time.perf_counter()\n",
-    "print(f\"Execution time: {(end_time - start_time) * 1_000_000 :.2f} µs\", file=sys.stderr, flush=True))\n"
+    "print(f\"Execution time: {(end_time - start_time) * 1_000_000 :.2f} µs\", file=sys.stderr, flush=True)\n"
    ]
   },
   {
@@ -339,8 +374,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "codingame",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
