start jueu de la vie

--- a/tips.ipynb
+++ b/tips.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "nb_brick = int(input())\n",
     "\n",
-    "# Lire 2 entiers sur 1 ligne\n",
+    "# Lire N entiers sur 1 ligne\n",
     "# Exemple : 42 21\n",
     "\n",
     "w, h = map(int, input().split())\n",
@@ -39,23 +39,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Créer une liste avec 1 une ligne d'entiers espacés \n",
+    "# Créer une liste à partir d'une ligne d'entiers espacés \n",
     "# Exemple : 100 10 150\n",
     "\n",
     "brick_weights = [int(i) for i in input().split()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Lire une date\n",
-    "# Exemple : 15.12.2014\n",
-    "\n",
-    "from datetime import date\n",
-    "begin = date(*list(map(int, input().split(\".\")))[::-1])\n"
    ]
   },
   {
@@ -69,6 +56,19 @@
     "\n",
     "rotations = input().split()\n",
     "#       ['x', 'y', \"x'\", 'z', \"y'\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lire une date\n",
+    "# Exemple : 15.12.2014\n",
+    "\n",
+    "from datetime import date\n",
+    "begin = date(*list(map(int, input().split(\".\")))[::-1])\n"
    ]
   },
   {
@@ -123,7 +123,7 @@
     "n = int(input())\n",
     "map_in = [list(input()) for _ in range(n)]\n",
     "\n",
-    "# Si n n'est pas utilie dans la suite \n",
+    "# Si n n'est pas utilisé dans la suite \n",
     "map_in = [list(input()) for _ in range(int(input()))]\n",
     "\n",
     "\n",
@@ -138,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Créer une liste 2D avec h lignes de w char\n",
+    "# Créer une liste 2D avec h lignes de w chars\n",
     "# Exemple :\n",
     "# 15 3\n",
     "# ...............\n",
@@ -162,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Créer une liste 3D avec n maps de h lignes de char\n",
+    "# Créer une liste 3D avec n maps de h lignes de chars\n",
     "\n",
     "n, h = map(int, input().split())\n",
     "list_of_2D_maps = [[list(input()) for _ in range(h)] for _ in range(n)]\n",
@@ -257,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Retrouver les coordonnées des valeurs 'a' dans une liste 2D\n",
+    "# Retrouver LES coordonnées des valeurs 'a' dans une liste 2D\n",
     "multiple_starts = [(y, x) for y, row in enumerate(map_in) for x, value in enumerate(row) if value == 'a']\n"
    ]
   },
@@ -268,8 +268,7 @@
    "outputs": [],
    "source": [
     "# .sort() ne retourne rien\n",
-    "\n",
-    "# le mieeux pour lire une liste et la trier\n",
+    "# le mieux pour lire une liste et la trier\n",
     "liste_triee = sorted([int(i) for i in input().split()], reverse=True)"
    ]
   },
