--- a/medium/06_custom_game_of_life/scrapbook.ipynb
+++ b/medium/06_custom_game_of_life/scrapbook.ipynb
@@ -1,29 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6662106690\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "n = 90000\n",
-    "\n",
-    "s = 0\n",
-    "for i in range(n, 0, -1):\n",
-    "    s+= n//i * i\n",
-    "print(s)    "
-   ]
-  }
- ],
+ "cells": [],
  "metadata": {
   "kernelspec": {
    "display_name": "codingame",
