--- a/tips.ipynb
+++ b/tips.ipynb
@@ -112,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Créer une liste 2D avec n lignes de char\n",
+    "# Créer une liste 2D à partir de n lignes de chars non espacés\n",
     "# Exemple :\n",
     "# 4\n",
     "# enzr\n",
@@ -138,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Créer une liste 2D avec h lignes de w chars\n",
+    "# Créer une liste 2D de chars à partir de h lignes de w chars non espacés\n",
     "# Exemple :\n",
     "# 15 3\n",
     "# ...............\n",
@@ -147,6 +147,64 @@
     "\n",
     "w, h = map(int, input().split())\n",
     "map_in = [list(input()) for _ in range(h)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Créer une liste 2D d'entiers 1 digit avec h lignes de w chars\n",
+    "# Exemple :\n",
+    "# 3 3\n",
+    "# 000\n",
+    "# 111\n",
+    "# 000\n",
+    "\n",
+    "w, h = map(int, input().split())\n",
+    "map_in = [list(map(int, input())) for _ in range(h)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Créer une liste 2D d'entiers avec h lignes de w ints espacés\n",
+    "# Exemple :\n",
+    "# 3 3\n",
+    "# 2  14    78\n",
+    "# 99  2 88888\n",
+    "# 0  09     7\n",
+    "\n",
+    "w, h = map(int, input().split())\n",
+    "map_in = [list(map(int, input().split())) for _ in range(h)]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Créer une liste 2D d'entiers en appliquant une transformation sur chaque char\n",
+    "# Exemple : \n",
+    "# .OO.\n",
+    "# O..O\n",
+    "# .OO.\n",
+    "\n",
+    "\n",
+    "map_in = [list(map((lambda c: 1 if c == \"O\" else 0), input())) for _ in range(h)]\n",
+    "\n",
+    "\n",
+    "c2i = lambda c: 1 if c == \"O\" else 0 # transforme les O en 1 et les . en 0\n",
+    "map_in = [list(map(c2i, input())) for _ in range(h)]\n",
+    "\n",
+    "\n",
+    "# [[0, 1, 1, 0], [1, 0, 0, 1], [0, 1, 1, 0]]"
    ]
   },
   {
@@ -182,14 +240,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Créer une liste 2D N x N de \"-\"\n",
-    "\n",
-    "map_out = [list(\"-\" * n) for _ in range(n)]\n",
-    "#       Plus rapide que : map_out = [['-' for _ in range(w)] for _ in range(h)]\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "# Afficher une liste 2D\n",
     "# Exemple : [['.', '.', 'O'], ['.', 'O', '.'], ['O', '.', '.']]\n",
@@ -203,10 +253,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Afficher une liste 2D d'entiers, utiliser une lambda pour transformer\n",
+    "# Exemple : [[0, 1, 1, 0], [1, 0, 0, 1], [0, 1, 1, 0]]\n",
+    "\n",
+    "for row in map_in:\n",
+    "    print(\"\".join((lambda i: \"O\" if i == 1 else \".\")(value) for value in row))\n",
+    "\n",
+    "\n",
+    "\n",
+    "i2c = lambda i: \"O\" if i == 1 else \".\" # transforme les 1 en O et les 0 en .\n",
+    "for row in map_in:\n",
+    "    print(\"\".join(i2c(value) for value in row))\n",
+    "\n",
+    "# .OO.\n",
+    "# O..O\n",
+    "# .OO.\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Divers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Créer une liste 2D N x N de \"-\"\n",
+    "\n",
+    "map_out = [list(\"-\" * n) for _ in range(n)]\n",
+    "#       Plus rapide que : map_out = [['-' for _ in range(w)] for _ in range(h)]\n"
    ]
   },
   {
