start what_the_brainfuck prog language :-)

--- a/tips.ipynb
+++ b/tips.ipynb
@@ -15,6 +15,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "w, h = map(int, input().split())\n",
+    "\n",
+    "list_1D = list(                                      input().split())     # input() = \"a e i o u y\"        \n",
+    "list_1D = list(map(int,                              input().split()))    # input() = \"100 10 150\"\n",
+    "list_1D = list(map((lambda c: 1 if c == \"O\" else 0), input()))            # input() = \"OOOO...OOO\"\n",
+    "list_1D = list(map((lambda c: 1 if c == \"O\" else 0), input().split()))    # input() = \"O O O O . . . O O O\"\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -23,14 +38,40 @@
     "# Lire 1 entier sur 1 ligne\n",
     "# Exemple : 42\n",
     "\n",
-    "nb_brick = int(input())\n",
+    "n = int(input())\n",
     "\n",
     "# Lire N entiers sur 1 ligne\n",
     "# Exemple : 42 21\n",
     "\n",
     "w, h = map(int, input().split())\n",
-    "#       À préférer à w, h = [int(i) for i in input().split()] qui créera une liste inutilement\n",
+    "#       À préférer à w, h = [int(i) for i in input().split()] qui créé une liste inutilement\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Créer une liste 1D à partir d'une ligne de chars contigus \n",
+    "# Exemple : aeiouy\n",
+    "\n",
+    "list_1D = list(input())\n",
+    "#       ['a', 'e', \"i\", 'o', 'u', 'y'] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Créer une liste à partir d'une ligne de chars espacés \n",
+    "# Exemple : a e i o u y\n",
+    "\n",
+    "list_1D = input().split()\n",
+    "#       ['a', 'e', \"i\", 'o', 'u', 'y'] split() retourne une liste"
    ]
   },
   {
@@ -42,7 +83,8 @@
     "# Créer une liste à partir d'une ligne d'entiers espacés \n",
     "# Exemple : 100 10 150\n",
     "\n",
-    "brick_weights = [int(i) for i in input().split()]"
+    "list_1D = [int(i) for i in input().split()]\n",
+    "list_1D = list(map(int, input().split()))"
    ]
   },
   {
@@ -51,24 +93,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Créer une liste à partir d'une ligne de chars espacés \n",
-    "# Exemple : x y x' z y'\n",
+    "# Créer une liste à partir d'une ligne de char qu'on transforme \n",
     "\n",
-    "rotations = input().split()\n",
-    "#       ['x', 'y', \"x'\", 'z', \"y'\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Lire une date\n",
-    "# Exemple : 15.12.2014\n",
+    "# Exemple : O O O O . . . O O O\n",
+    "list_1D = list(map((lambda c: 1 if c == \"O\" else 0), input().split())) \n",
     "\n",
-    "from datetime import date\n",
-    "begin = date(*list(map(int, input().split(\".\")))[::-1])\n"
+    "\n",
+    "# Exemple : OOOO...OOO\n",
+    "list_1D = list(map((lambda c: 1 if c == \"O\" else 0), input())) \n"
    ]
   },
   {
@@ -80,7 +112,7 @@
     "# Créer une liste à partir d'une ligne de groupes de chars séparés par des points\n",
     "# Exemple : sqdqsd.9J4T7A55Q.Something.465.just\n",
     "\n",
-    "chunks = input().split(\".\")"
+    "list_1D = input().split(\".\")"
    ]
   },
   {
@@ -100,10 +132,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lire une date\n",
+    "# Exemple : 15.12.2014\n",
+    "\n",
+    "from datetime import date\n",
+    "begin = date(*list(map(int, input().split(\".\")))[::-1])\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 2D"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "list_2D = [list(                                      input())  for _ in range(h)] # input() = \"ddxk etc.\"\n",
+    "list_2D = [list(map(int,                              input())) for _ in range(h)] # input() = \"1118 etc.\"\n",
+    "list_2D = [list(map((lambda c: 1 if c == \"O\" else 0), input())) for _ in range(h)] # input() = \"OZZO etc.\"\n",
+    "```"
    ]
   },
   {
