--- a/tips.ipynb
+++ b/tips.ipynb
@@ -21,10 +21,10 @@
     "```\n",
     "w, h = map(int, input().split())\n",
     "\n",
-    "list_1D = list(                                      input().split())     # input() = \"a e i o u y\"        \n",
-    "list_1D = list(map(int,                              input().split()))    # input() = \"100 10 150\"\n",
-    "list_1D = list(map((lambda c: 1 if c == \"O\" else 0), input()))            # input() = \"OOOO...OOO\"\n",
-    "list_1D = list(map((lambda c: 1 if c == \"O\" else 0), input().split()))    # input() = \"O O O O . . . O O O\"\n",
+    "list_1D = list(input().split()) # input() = \"a e i o u y\"        \n",
+    "list_1D = list(map(int, input().split())) # input() = \"100 10 150\"\n",
+    "list_1D = list(map((lambda c: 1 if c == \"O\" else 0), input())) # input() = \"OOOO...OOO\"\n",
+    "list_1D = list(map((lambda c: 1 if c == \"O\" else 0), input().split())) # input() = \"O O O O . . . O O O\"\n",
     "\n",
     "```"
    ]
@@ -46,6 +46,22 @@
     "w, h = map(int, input().split())\n",
     "#       À préférer à w, h = [int(i) for i in input().split()] qui créé une liste inutilement\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Créer une liste 1D à partir de N entiers sur N lignes\n",
+    "# Exemple : \n",
+    "# 2\n",
+    "# 42\n",
+    "# 21\n",
+    "\n",
+    "n_inputs = int(input())\n",
+    "inputs = [int(input()) for _ in range(n_inputs)]"
    ]
   },
   {
@@ -93,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Créer une liste à partir d'une ligne de char qu'on transforme \n",
+    "# Créer une liste à partir d'une ligne de chars qu'on transforme \n",
     "\n",
     "# Exemple : O O O O . . . O O O\n",
     "list_1D = list(map((lambda c: 1 if c == \"O\" else 0), input().split())) \n",
@@ -187,6 +203,11 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -336,6 +357,16 @@
    "metadata": {},
    "source": [
     "# Divers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Créer une liste 1D de taille N remplie de 0\n",
+    "array = [0] * N "
    ]
   },
   {
