start working on brainfuck

--- a/medium/08_what_the_brainfuck/scrapbook.ipynb
+++ b/medium/08_what_the_brainfuck/scrapbook.ipynb
@@ -1,5 +1,40 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "400"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def func1(w, h):\n",
+    "    return (w*h)\n",
+    "\n",
+    "def func2(w):\n",
+    "    return (100*w)\n",
+    "\n",
+    "\n",
+    "ops = {\n",
+    "    \">\": func1,\n",
+    "    \"<\": func2,\n",
+    "}\n",
+    "\n",
+    "\n",
+    "ops[\">\"](4, 5)\n",
+    "ops[\"<\"](4)"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "codingame",
