indentation cgx is done :-)

--- a/hard/01_indentation_cgx/scrapbook.ipynb
+++ b/hard/01_indentation_cgx/scrapbook.ipynb
@@ -2,36 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "400"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[]]\n",
+      "[[[]]]\n",
+      "[[]]\n"
+     ]
     }
    ],
    "source": [
-    "def func1(w, h):\n",
-    "    return (w*h)\n",
+    "# stack = [\"a\", \"b\", \"c\", \"d\"] \n",
+    "# stack = [[\"a\"], [\"b\"], [\"c\"], [\"d\"]] \n",
+    "stack=[[]]\n",
+    "new_block = []\n",
+    "stack[-1].append(new_block)  # Ajouter au parent\n",
+    "stack.append(new_block) \n",
     "\n",
-    "def func2(w):\n",
-    "    return (100*w)\n",
+    "stack.pop()\n",
+    "print(stack)\n",
     "\n",
-    "\n",
-    "ops = {\n",
-    "    \">\": func1,\n",
-    "    \"<\": func2,\n",
-    "}\n",
-    "\n",
-    "\n",
-    "ops[\">\"](4, 5)\n",
-    "ops[\"<\"](4)"
+    "stack[-1].pop()\n",
+    "print(stack)"
    ]
   }
  ],
