--- a/tips.ipynb
+++ b/tips.ipynb
@@ -144,7 +144,7 @@
     "# This is the (first|second|third) choice.\n",
     "# This is the (first|second|third) choice.\n",
     "\n",
-    "str_in = \"\\n\".join(input() for _ in range(int(input())))\n"
+    "str_in = \"\".join(input() for _ in range(int(input())))\n"
    ]
   },
   {
