Add sample test

--- a/tips.ipynb
+++ b/tips.ipynb
@@ -542,6 +542,29 @@
     "\n",
     "bfs(root)  # Output: 50 30 70 20 40 60 80\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Recursive\n",
+    "\n",
+    "def check_if_in(voc, morse_str):\n",
+    "    if morse_str == \"\":\n",
+    "        return 1\n",
+    "\n",
+    "    count = 0\n",
+    "    for translated in voc.values():\n",
+    "        if morse_str.startswith(translated):\n",
+    "            count += check_if_in(voc, morse_str[len(translated) :])\n",
+    "    return count\n",
+    "\n",
+    "# lower in main()\n",
+    "result = check_if_in(vocabulary, morse_input)\n",
+    "print(result)\n"
+   ]
   }
  ],
  "metadata": {
