Resistance is done. Start Music Scores. No Idea :-)

--- a/expert/01_the_resistance/scrapbook.ipynb
+++ b/expert/01_the_resistance/scrapbook.ipynb
@@ -1,5 +1,64 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Store results in a dictionary\n",
+    "memo = {}\n",
+    "\n",
+    "def fib(n):\n",
+    "    if n in memo:\n",
+    "        return memo[n]  # Return cached result\n",
+    "    \n",
+    "    if n <= 1:\n",
+    "        return n  # Base case\n",
+    "    \n",
+    "    memo[n] = fib(n-1) + fib(n-2)  # Store result in cache\n",
+    "    return memo[n]\n",
+    "\n",
+    "print(fib(10))  # 55\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  Les arguments par défaut sont évalués une seule fois, lors de la définition de la fonction, et non à chaque appel.\n",
+    "#  memo est donc partagé entre tous les appels de la fonction.\n",
+    "def expensive_func(x, y, memo={}):\n",
+    "    if (x, y) in memo:\n",
+    "        return memo[(x, y)]  # Return cached result\n",
+    "\n",
+    "    result = x * y  # Example of expensive computation\n",
+    "    memo[(x, y)] = result  # Store result\n",
+    "    return result\n",
+    "\n",
+    "print(expensive_func(3, 4))  # 12\n",
+    "print(expensive_func(3, 4))  # Reutilise le cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "codingame",
