--- a/tips.ipynb
+++ b/tips.ipynb
@@ -565,6 +565,27 @@
     "result = check_if_in(vocabulary, morse_input)\n",
     "print(result)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Memoization\n",
+    "# ! “cache” provides memoization. As a default argument, it is shared between calls and therefore behaves like a static variable.\n",
+    "\n",
+    "def expensive_func(x, y, cache={}): \n",
+    "    if (x, y) in cache:\n",
+    "        return cache[(x, y)]  # Return cached result\n",
+    "\n",
+    "    result = x * y  # Example of expensive computation\n",
+    "    cache[(x, y)] = result  # Store result\n",
+    "    return result\n",
+    "\n",
+    "print(expensive_func(3, 4))  # 12\n",
+    "print(expensive_func(3, 4))  # Reutilise le cache"
+   ]
   }
  ],
  "metadata": {
