--- a/tips.ipynb
+++ b/tips.ipynb
@@ -586,6 +586,35 @@
     "print(expensive_func(3, 4))  # 12\n",
     "print(expensive_func(3, 4))  # Reutilise le cache"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5, 1, 2, 3]\n",
+      "[2, 3, 4, 5, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Rotate right by n\n",
+    "a = [1, 2, 3, 4, 5]\n",
+    "n = 2  \n",
+    "rotated_list = a[-n:] + a[:-n] \n",
+    "print(rotated_list)\n",
+    "\n",
+    "\n",
+    "# Rotate left by n\n",
+    "a = [1, 2, 3, 4, 5]\n",
+    "n = 1  \n",
+    "rotated_list = a[n:] + a[0:n] \n",
+    "print(rotated_list)"
+   ]
   }
  ],
  "metadata": {
