Mars Lander & PID in Python

--- a/tips.ipynb
+++ b/tips.ipynb
@@ -615,6 +615,26 @@
     "rotated_list = a[n:] + a[0:n] \n",
     "print(rotated_list)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clamp(x):\n",
+    "    # return max(0.0, min(x, 4.0))\n",
+    "    return int(max(0.0, min(x, 4.0)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cmd = (lambda x: round(max(0.0, min(x, 4.0))))(vspeed_correction)"
+   ]
   }
  ],
  "metadata": {
