Start darts-checkout-routes

--- a/tips.ipynb
+++ b/tips.ipynb
@@ -624,7 +624,7 @@
    "source": [
     "def clamp(x):\n",
     "    # return max(0.0, min(x, 4.0))\n",
-    "    return int(max(0.0, min(x, 4.0)))\n"
+    "    return round(max(0.0, min(x, 4.0)))\n"
    ]
   },
   {
@@ -634,6 +634,29 @@
    "outputs": [],
    "source": [
     "cmd = (lambda x: round(max(0.0, min(x, 4.0))))(vspeed_correction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_within_bounds(r: int, c: int, matrix: List[List[int]]) -> bool:\n",
+    "    return 0 <= r < len(matrix) and 0 <= c < len(matrix[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dirs = [(-1, 0), (1, 0), (0, -1), (0, 1)]\n",
+    "for d in dirs:\n",
+    "    next_r, next_c = r + d[0], c + d[1]\n",
+    "    if is_within_bounds(next_r, next_c, matrix) and matrix[next_r][next_c] == 1:\n",
+    "        dfs(next_r, next_c, matrix)"
    ]
   }
  ],
