Review my notes

--- a/tips.ipynb
+++ b/tips.ipynb
@@ -363,6 +363,35 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Joe': 20, 'Molly': 20, 'Brandon': 20, 'Eric': 15, 'Louis': 15}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# On a un dictionnaire avec des noms dans un ordre\n",
+    "# On veut afficher par note décroissant MAIS  à note égale, garder l'ordre du dico initial\n",
+    "# Voir easy\\29_darts\n",
+    "\n",
+    "d = {\"Eric\": 15, \"Joe\": 20, \"Molly\": 20, \"Louis\": 15, \"Brandon\": 20}\n",
+    "\n",
+    "# Trier les éléments par valeur, et en cas d'égalité, garder l'ordre d'apparition\n",
+    "sorted_items = sorted(d.items(), key=lambda x: (-x[1], list(d.keys()).index(x[0])))\n",
+    "\n",
+    "# Reconstruire un dictionnaire ordonné\n",
+    "sorted_d = dict(sorted_items)\n",
+    "\n",
+    "print(sorted_d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Créer une liste 1D de taille N remplie de 0\n",
@@ -657,6 +686,65 @@
     "    next_r, next_c = r + d[0], c + d[1]\n",
     "    if is_within_bounds(next_r, next_c, matrix) and matrix[next_r][next_c] == 1:\n",
     "        dfs(next_r, next_c, matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Comprehension de dictionnaire\n",
+    "# Voir easy\\29_darts\n",
+    "# On lit le nb de participants\n",
+    "# On crée un dictionnaire avec les noms des participants et leur score initial à 0\n",
+    "n = int(input())\n",
+    "scores = {input(): 0 for _ in range(n)}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Un pid\n",
+    "# Voir easy\\27_mars_lander_episode_1\n",
+    "#  \n",
+    "\n",
+    "import time\n",
+    "\n",
+    "class PIDController:\n",
+    "    def __init__(self, kp, ki, kd):\n",
+    "        self.kp = kp\n",
+    "        self.ki = ki\n",
+    "        self.kd = kd\n",
+    "        self.previous_error = 0\n",
+    "        self.integral = 0\n",
+    "        self.last_time = time.time()\n",
+    "\n",
+    "    def compute(self, error):\n",
+    "        current_time = time.time()\n",
+    "        delta_time = current_time - self.last_time\n",
+    "        self.last_time = current_time\n",
+    "        self.integral += error * delta_time\n",
+    "        derivative = (error - self.previous_error) / delta_time if delta_time > 0 else 0\n",
+    "        self.previous_error = error\n",
+    "        return self.kp * error + self.ki * self.integral + self.kd * derivative\n",
+    "\n",
+    "\n",
+    "# kTarget_Speed = -39  # We want to reach and maintain -40 m/s\n",
+    "# N = int(input())\n",
+    "# surfaces = [tuple(map(int, input().split())) for _ in range(N)]\n",
+    "vspeed_pid = PIDController(kp=4.0, ki=0, kd=0.0)  # PID to maintain -40 m/s\n",
+    "while True:\n",
+    "    # x, y, h_speed, v_speed, fuel, rotate, power = [int(i) for i in input().split()]\n",
+    "    # if v_speed > kTarget_Speed:\n",
+    "    #     cmd = 0\n",
+    "    # else:\n",
+    "        vspeed_correction = vspeed_pid.compute(kTarget_Speed - v_speed)\n",
+    "    #     cmd = (lambda x: round(max(0.0, min(x, 4.0))))(vspeed_correction)\n",
+    "    # print(f\"0 {cmd}\")  # Time 6:04 and Fuel = 302\n"
    ]
   }
  ],
